packages/svelte/tests/compiler-errors/samples/style-unclosed/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'unclosed-style',
		message: '<style> must have a closing tag',
		position: [31, 31]
	}
});
